<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.goldze.mvvmhabit.ui.main.DeviceControlViewModel" />
        <import type="me.tatarka.bindingcollectionadapter2.BindingRecyclerViewAdapter" />
        <import type="com.goldze.mvvmhabit.entity.DeviceStatusInfoEntity" />
        <variable
            name="viewModel"
            type="DeviceControlViewModel" />

        <import type="me.tatarka.bindingcollectionadapter2.LayoutManagers" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/mainbackground"
        android:fitsSystemWindows="true"
        android:orientation="vertical">
        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            binding:toolbarViewModel="@{viewModel.toolbarViewModel}" />
        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/twinklingRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            binding:onLoadMoreCommand="@{viewModel.onLoadMoreCommand}"
            binding:onRefreshCommand="@{viewModel.onRefreshCommand}"
            binding:tr_head_height="80dp"
            binding:tr_wave_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <com.youth.banner.Banner
                    android:id="@+id/banner_control"
                    android:layout_width="match_parent"
                    android:layout_height="180dp" />

                <ImageView
                    android:id="@+id/iv_devicecontrol_all_bg"
                    android:layout_width="252dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="202dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/pillow"
                    />
                <ImageView
                    android:id="@+id/iv_devicecontrol_bg"
                    android:layout_width="252dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="202dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/stop"
                    />
                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/iv_devicecontrol_gif"
                    android:layout_width="180dp"
                    android:layout_height="100.8dp"
                    android:layout_marginTop="239.8dp"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/inner_high_hot"
                    />
                <LinearLayout
                    android:id="@+id/ll_devicecontrol_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ll_devicecontrol_rotation_mode"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:gravity="center"
                    android:orientation="horizontal">
                <Switch
                    android:id="@+id/switch_open"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin_large_more"
                    android:checked="false"
                    binding:onClickCommand="@{viewModel.onPowSwitchChangeCommand}"
                    style="@style/SwitchStyle"
                    android:text="@string/devicecontrol_switch_open" />
                    <Switch
                        android:id="@+id/switch_warm"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:checked="false"
                        binding:onClickCommand="@{viewModel.onWarmSwitchChangeCommand}"
                        style="@style/SwitchStyle"
                        android:text="@string/devicecontrol_switch_warm" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_devicecontrol_rotation_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/margin_med"
                    android:orientation="horizontal">
                    <CheckedTextView
                        android:id="@+id/tv_rotation_mode_positive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="@dimen/text_size_18"
                        android:padding="@dimen/margin_min"
                        style="@style/roationmodel_Text_larger_Selector"
                        android:background="@drawable/selector_roationmode_left"
                        binding:onClickCommand="@{viewModel.onRoationPositiveCommand}"
                        android:text="@string/devicecontrol_rotation_mode_positive" />

                    <include
                        layout="@layout/model_diver_ver"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        />

                    <CheckedTextView
                        android:id="@+id/tv_rotation_mode_reversal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_18"
                        android:padding="@dimen/margin_min"
                        android:gravity="center"
                        style="@style/roationmodel_Text_larger_Selector"
                        android:background="@drawable/selector_roationmode_middle"
                        binding:onClickCommand="@{viewModel.onRoationReversalCommand}"
                        android:text="@string/devicecontrol_rotation_mode_reversal" />
                    <include
                        layout="@layout/model_diver_ver"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        />
                    <CheckedTextView
                        android:id="@+id/tv_rotation_mode_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_18"
                        android:gravity="center"
                        android:padding="@dimen/margin_min"
                        style="@style/roationmodel_Text_larger_Selector"
                        android:background="@drawable/selector_roationmode_right"
                        binding:onClickCommand="@{viewModel.onRoationAutoCommand}"
                        android:text="@string/devicecontrol_rotation_mode_auto" />
                </LinearLayout>
                <CheckedTextView
                    android:id="@+id/tv_rotation_high"
                    android:layout_marginTop="185dp"
                    android:layout_toStartOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginEnd="@dimen/margin_max"
                    binding:onClickCommand="@{viewModel.onHighSpeeSwitchChangeCommand}"
                    style="@style/controlText_larger_Selector"
                    android:text="@string/devicecontrol_rotation_speed_high" />
                <ImageView
                    android:id="@+id/imageViewLeftTop"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_rotation_high"
                    android:layout_toStartOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginEnd="35dp"
                    binding:srcCompat="@mipmap/left_topline" />
                <CheckedTextView
                    android:id="@+id/tv_rotation_mid"
                    android:layout_toStartOf="@+id/iv_devicecontrol_gif"
                    android:layout_below="@+id/imageViewLeftTop"
                    android:layout_marginEnd="30dp"
                    style="@style/controlText_larger_Selector"
                    binding:onClickCommand="@{viewModel.onMidSpeeSwitchChangeCommand}"
                    android:text="@string/devicecontrol_rotation_speed_middle" />
<!--                    android:text="@string/devicecontrol_rotation_speed_middle" -->

                <ImageView
                    android:id="@+id/imageViewleftBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_rotation_mid"
                    android:layout_toStartOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginEnd="@dimen/margin_med"
                    binding:srcCompat="@mipmap/left_bottomline" />
                <CheckedTextView
                    android:id="@+id/tv_rotation_low"
                    android:layout_below="@+id/imageViewleftBottom"
                    android:layout_alignStart="@+id/tv_rotation_high"
                    android:layout_marginStart="@dimen/margin_normal"
                    style="@style/controlText_larger_Selector"
                    binding:onClickCommand="@{viewModel.onLowSpeeSwitchChangeCommand}"
                    android:text="@string/devicecontrol_rotation_speed_low" />

                <CheckedTextView
                    android:id="@+id/tv_volume_high"
                    android:layout_alignTop="@+id/tv_rotation_high"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="@dimen/margin_med"
                    style="@style/controlText_larger_Selector"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    binding:onClickCommand="@{viewModel.onHighVolSwitchChangeCommand}"
                    android:text="@string/devicecontrol_volume_high" />
                <ImageView
                    android:id="@+id/imageViewRightTop"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/tv_volume_high"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="28dp"
                    binding:srcCompat="@mipmap/right_topline" />
                <CheckedTextView
                    android:id="@+id/tv_volume_middle"
                    android:layout_below="@+id/imageViewRightTop"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="26dp"
                    style="@style/controlText_larger_Selector"
                    android:paddingStart="15dp"
                    binding:onClickCommand="@{viewModel.onMidVolSwitchChangeCommand}"
                    android:text="@string/devicecontrol_volume_middle" />
                <ImageView
                    android:id="@+id/imageViewRightMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/tv_volume_middle"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="32dp"
                    binding:srcCompat="@mipmap/right_midline" />
                <CheckedTextView
                    android:id="@+id/tv_volume_low"
                    android:layout_below="@+id/imageViewRightMiddle"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="16dp"
                    style="@style/controlText_larger_Selector"
                    android:paddingStart="15dp"
                    binding:onClickCommand="@{viewModel.onLowVolSwitchChangeCommand}"
                    android:text="@string/devicecontrol_volume_low" />
                <ImageView
                    android:id="@+id/imageViewRightBotoom"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@+id/tv_volume_low"
                    android:layout_toEndOf="@+id/iv_devicecontrol_gif"
                    android:layout_marginStart="12dp"
                    binding:srcCompat="@mipmap/right_bottomline" />

                <CheckedTextView
                    android:id="@+id/tv_volume_silent"
                    android:layout_below="@+id/imageViewRightBotoom"
                    android:layout_alignEnd="@+id/tv_volume_high"
                    android:layout_alignBottom="@+id/tv_rotation_low"
                    style="@style/controlText_larger_Selector"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/margin_normal"
                    binding:onClickCommand="@{viewModel.onMuteVolSwitchChangeCommand}"
                    android:text="@string/devicecontrol_volume_mute" />

            </RelativeLayout>



        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </LinearLayout>
</layout>